--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@ var estado = 0;
 var estado1 = 0;
 var estado2 = 0;
 var estado3 = 0;
-const cambio1 = "file:///C:/Users/Usuario/Desktop/adelante.png";
-const cambio2 = "file:///C:/Users/Usuario/Desktop/atras.png";
-const cambio3 = "file:///C:/Users/Usuario/Desktop/uh.png";
-const defecto = "file:///C:/Users/Usuario/Desktop/estatico.png";
-const agachado1 = "file:///C:/Users/Usuario/Desktop/agachado1.png";
-const agachado2 = "file:///C:/Users/Usuario/Desktop/agachado2.png";
-const alasup = "file:///C:/Users/Usuario/Desktop/alasup.png";
-const alasdown = "file:///C:/Users/Usuario/Desktop/alasdown.png";
+const cambio1 = "adelante.png";
+const cambio2 = "atras.png";
+const cambio3 = "uh.png";
+const defecto = "estatico.png";
+const agachado1 = "agachado1.png";
+const agachado2 = "agachado2.png";
+const alasup = "alasup.png";
+const alasdown = "alasdown.png";
 var otrocontador = 1;
 var otrocontadorx2 = 1;
 var otrocontadorx3 = 1;
