--- a/index.html
+++ b/index.html
@@ -250,6 +250,8 @@ estado1 = 0;
 estado2 = 0;
 estado3 = 0;
 botonon.click();
+botononononononon.click();
+botonononononono.click();
 }
 }
 function uh(){
